yaml/istio/apps-destination-rule-inventory-v1.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: inventory-v1
spec:
  host: inventory
  subsets:
  - name: v1
    labels:
      app: inventory
      version: v1
