yaml/istio/apps-destination-rule-inventory-v1v2-header.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: inventory
spec:
  hosts:
  - "inventory-service.apps.svc.cluster.local"
  http:
  - match:
    - headers:
        end-user:
          exact: jason
    route:
    - destination:
        host: inventory
        port:
          number: 8080
        subset: v2
  - route:
    - destination:
        host: inventory
        port:
          number: 8080
        subset: v1
