yaml/istio/apps-destination-rule-inventory-v2-timeout.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: inventory
spec:
  hosts:
  - "inventory-service.apps.svc.cluster.local"
  http:
  - match:
    - uri:
        exact: /inventory
    route:
    - destination:
        host: inventory
        port:
          number: 8080
        subset: v2
    timeout: 3s
