yaml/istio/apps-destination-rule-inventory-v2.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: inventory-v2
spec:
  host: inventory
  subsets:
  - name: v2
    labels:
      app: inventory
      version: v2
