yaml/istio/apps-destination-rule-order-v1.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: order-v1
spec:
  host: order
  subsets:
  - name: v1
    labels:
      app: order
      version: v1
