yaml/istio/apps-destination-rule-order-v2.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: order-v2
spec:
  host: order
  subsets:
  - name: v2
    labels:
      app: order
      version: v2
