yaml/istio/apps-virtualservice-inventory-v2.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: inventory
spec:
  hosts:
  - inventory
  http:
  - match:
    - uri:
        prefix: /inventory
    route:
    - destination:
        host: inventory
        port:
          number: 8080
        subset: v2
