yaml/istio/apps-virtualservice-order-default.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: order
spec:
  hosts:
  - "*"
  gateways:
  - apps-gateway
  http:
  - match:
    - uri:
        exact: /submit
    route:
    - destination:
        host: order
        port:
          number: 8080
