yaml/istio/apps-virtualservice-order-v1v2-delayinjected-header.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: order
spec:
  hosts:
  - "*"
  gateways:
  - apps-gateway
  http:
  - fault:
      delay:
        fixedDelay: 7s
        percentage:
          value: 100
    match:
    - headers:
        end-user:
          exact: jason
    route:
    - destination:
        host: order
        port:
          number: 8080
        subset: v2
  - route:
    - destination:
        host: order
        port:
          number: 8080
        subset: v1
