yaml/istio/apps-virtualservice-v1.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: apps
spec:
  hosts:
  - "*"
  gateways:
  - apps-gateway
  http:
  - match:
    - uri:
        exact: /submit
    route:
    - destination:
        host: order
        port:
          number: 8080
        subset: v1 # refer to destination rule of order, and subset v1
